# energy-efficient-wsn-crypto

./: CMakeLists.txt  README.md  requirements.txt
include/: ascon_crypto.h  crypto_app.h  event_emitter.h  memostp_protocol.h  metrics_collector.h  node_monitor.h  snake_optimizer.h
netanim-sim/: memostp-animation.xml
new_src/: ascon_crypto.cc  crypto_app.cc  event_emitter.cc  main.cc  memostp_protocol.cc  metrics_collector.cc  node_monitor.cc  snake_optimizer.cc
scripts/: visualize_results.py
sim-server/: dashboard.css  dashboard.html  dashboard.js  package.json  run.sh  server.js
src/: added_dead.cc  protocol.cc  protocol_gnu.cc  protocol_net.cc  wsn_protocol.cc
wsn_vis/: package-lock.json  package.json
